--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ color: #003166;
    position: fixed;
    width: 100%;
 }
+#hearing{
+    width: 300px;
+    height:300px;
+}
+.h{
+    font-family: 'Gowun Dodum', sans-serif;  
+}
